kube/deployment.env.yaml
---
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: plugserv-ingress
  annotations:
    external-dns.alpha.kubernetes.io/hostname: ${SITE}
    external-dns.alpha.kubernetes.io/target: ${KILO_IP}
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - www.plugserv.com
    secretName: plugserv-cert
  rules:
  - host: www.plugserv.com
    http:
      paths:
      - path: /assets
        pathType: Prefix
        backend:
          serviceName: plugserv-service
          servicePort: 80
      - path: /
        pathType: Prefix
        backend:
          serviceName: plugserv-service
          servicePort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: plugserv-service
spec:
  selector:
    app: plugserv
  ports:
  - name: web
    port: 8000
  - name: static
    port: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plugserv
spec:
  selector:
    matchLabels:
      app: plugserv
  replicas: 1
  template:
    metadata:
      labels:
        app: plugserv
    spec:
      nodeSelector:
        kubernetes.io/hostname: kilo
      imagePullSecrets:
      - name: registry-credentials
      containers:
      - name: web
        image: ${DOCKER_REPO}/plugserv:k8s
        imagePullPolicy: Always
        volumeMounts:
        - name: appvol
          mountPath: /opt/plugserv
        ports:
        - containerPort: 8000
      - name: static
        image: nginx
        volumeMounts:
        - name: assetvol
          mountPath: /usr/share/nginx/html/assets
        ports:
        - containerPort: 80
      volumes:
      - name: appvol
        hostPath:
          path: /opt/k3slocal/plugserv
          type: DirectoryOrCreate
      - name: assetvol
        hostPath:
          path: /opt/k3slocal/plugserv-static
          type: DirectoryOrCreate
